Issue #75: added Linux static library back to CMake config

--- a/src/cmake/epiphansdk/CMakeLists.txt
+++ b/src/cmake/epiphansdk/CMakeLists.txt
@@ -34,13 +34,19 @@ SET(FrmGrab_HEADERS
     $ENV{EpiphanSDK_DIR}/epiphan/include/v2u_version.h
     $ENV{EpiphanSDK_DIR}/epiphan/frmgrab/include/frmgrab.h
     )
-if(${CMAKE_GENERATOR_PLATFORM} MATCHES "x64")
+if(WIN32)
+    if(${CMAKE_GENERATOR_PLATFORM} MATCHES "x64")
+        SET(FrmGrab_LIB
+            $ENV{EpiphanSDK_DIR}/epiphan/frmgrab/lib/win/x64/frmgrab.lib
+            )
+    else()
+        SET(FrmGrab_LIB
+            $ENV{EpiphanSDK_DIR}/epiphan/frmgrab/lib/win/Win32/frmgrab.lib
+            )
+    endif()
+elseif(UNIX)
     SET(FrmGrab_LIB
-        $ENV{EpiphanSDK_DIR}/epiphan/frmgrab/lib/win/x64/frmgrab.lib
-        )
-else()
-    SET(FrmGrab_LIB
-        $ENV{EpiphanSDK_DIR}/epiphan/frmgrab/lib/win/Win32/frmgrab.lib
+        $ENV{EpiphanSDK_DIR}/epiphan/frmgrab/lib/linux/x86_64/libfrmgrab.a
         )
 endif()
 
