Issue #78, #46: CMake not using OpenCV for Epiphan DVI2PCIe Duo captures

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,7 +136,7 @@ if(USE_BLACKMAGIC_DECKLINK_4K_EXTREME_12G)
 endif(USE_BLACKMAGIC_DECKLINK_4K_EXTREME_12G)
 
 # Determine whether OpenCV needed
-if(((USE_EPIPHAN_DVI2PCIE_DUO OR USE_NETWORK_SOURCES) AND USE_BGRA) OR
+if((USE_NETWORK_SOURCES AND USE_BGRA) OR
     USE_XVID)
     SET(USE_OPENCV ON CACHE BOOL "OFF ON" FORCE)
 endif()
