--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -554,12 +554,14 @@ windows:
   variables:
     EpiphanSDK_DIR: C:/Program Files/Epiphan/epiphan_sdk-3.30.3.0007
     zlib_root: C:/Program Files/zlib/zlib-1.2.3-lib
+    boost_includedir: C:/Boost/boost_1_69_0
+    boost_librarydir: C:/Boost/boost_1_69_0/stage/lib
   before_script:
     - echo "This is the Windows script's before_script to be able to skip global before_script, which is Linux-specific"
   script:
     - mkdir build
     - cd build
-    - cmake -D CMAKE_BUILD_TYPE=Release -D ZLIB_ROOT="%zlib_root%" -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D ENABLE_NONFREE=ON -D USE_EPIPHANSDK=ON ../src
+    - cmake -D CMAKE_BUILD_TYPE=Release -D BOOST_INCLUDEDIR="%boost_includedir%" -D BOOST_LIBRARYDIR="%boost_librarydir%" -D ZLIB_ROOT="%zlib_root%" -D USE_PYTHON=ON -D USE_NUMPY=ON -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D ENABLE_NONFREE=ON -D USE_EPIPHANSDK=ON ../src
     - cmake --build . --config Release
     - ls
   tags:
