--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -573,3 +573,4 @@ windows:
     - 75-build-against-epiphan-sdk-on-windows-10-for-69
     - 78-opencv-free-epiphan-on-windows-10-for-69
     - 76-build-against-boost.python-on-windows-10-for-69
+    - 81-build-against-python37-on-windows-10-for-69
