Issue #81: caching PYTHONLIBS_VERSION_STRING in CMake discovery script

--- a/src/cmake/pythonlibs/CMakeLists.txt
+++ b/src/cmake/pythonlibs/CMakeLists.txt
@@ -7,3 +7,6 @@ SET(PYTHON_INCLUDE_DIRS ${PYTHON_INCLUDE_DIRS}
 SET(PYTHON_LIBRARIES ${PYTHON_LIBRARIES}
     CACHE INTERNAL "PythonLibs libraries"
 )
+SET(PYTHONLIBS_VERSION_STRING ${PYTHONLIBS_VERSION_STRING}
+    CACHE INTERNAL "PythonLibs version string"
+)
