--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -10,9 +10,22 @@ if(NOT PYTHONLIBS_VERSION_STRING)
     endif()
 endif()
 if(PYTHONLIBS_VERSION_STRING MATCHES ^3\.*)
-    SET(GG_BOOST_PYTHON_SUFFIX 3)
+    if(UNIX)
+        SET(GG_BOOST_PYTHON_SUFFIX 3)
+    elseif(WIN32)
+        if(PYTHONLIBS_VERSION_STRING MATCHES ^3\.7\.*)
+            SET(GG_BOOST_PYTHON_SUFFIX 37)
+        else()
+            MESSAGE(FATAL_ERROR
+                "Found Python version ${PYTHONLIBS_VERSION_STRING} (on Windows only 3.7 is experimentally supported)")
+        endif()
+    endif()
 elseif(PYTHONLIBS_VERSION_STRING MATCHES ^2\.7\.*)
-    SET(GG_BOOST_PYTHON_SUFFIX "")
+    if(UNIX)
+        SET(GG_BOOST_PYTHON_SUFFIX "")
+    elseif(WIN32)
+        SET(GG_BOOST_PYTHON_SUFFIX 27)
+    endif()
 else()
     MESSAGE(FATAL_ERROR "Found unsupported Python version ${PYTHONLIBS_VERSION_STRING}")
 endif()
