--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -1,5 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
 
+# DEBUGGING ONLY
+message("BOOST_ROOT: ${BOOST_ROOT}")
+message("BOOST_INCLUDEDIR: ${BOOST_INCLUDEDIR}")
+message("BOOST_LIBRARYDIR: ${BOOST_LIBRARYDIR}")
+
 if(NOT PYTHONLIBS_VERSION_STRING)
     # Needed in case PythonLibs discovery script not run, see
     # https://github.com/gift-surg/GIFT-Grab/issues/83
