Using BOOST_ROOT as C:/Boost/boost_1_69_0/boost

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -556,6 +556,7 @@ windows:
   variables:
     EpiphanSDK_DIR: C:/Program Files/Epiphan/epiphan_sdk-3.30.3.0007
     zlib_root: C:/Program Files/zlib/zlib-1.2.3-lib
+    boost_root: C:/Boost/boost_1_69_0/boost
     boost_includedir: C:/Boost/boost_1_69_0
     boost_librarydir: C:/Boost/boost_1_69_0/stage/lib
     python_include_dirs: C:/Python/Python3.7.1/include
@@ -565,7 +566,7 @@ windows:
   script:
     - mkdir build
     - cd build
-    - cmake -D CMAKE_BUILD_TYPE=Release -D PYTHON_INCLUDE_DIRS="%python_include_dirs%" -D PYTHON_LIBRARY="%python_library%" -D Boost_NO_SYSTEM_PATHS=ON -D BOOST_INCLUDEDIR="%boost_includedir%" -D BOOST_LIBRARYDIR="%boost_librarydir%" -D ZLIB_ROOT="%zlib_root%" -D BUILD_PYTHON=ON -D USE_NUMPY=ON -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D ENABLE_NONFREE=ON -D USE_EPIPHANSDK=ON ../src
+    - cmake -D CMAKE_BUILD_TYPE=Release -D PYTHON_INCLUDE_DIRS="%python_include_dirs%" -D PYTHON_LIBRARY="%python_library%" -D Boost_NO_SYSTEM_PATHS=ON -D BOOST_ROOT="%boost_root%" -D BOOST_INCLUDEDIR="%boost_includedir%" -D BOOST_LIBRARYDIR="%boost_librarydir%" -D ZLIB_ROOT="%zlib_root%" -D BUILD_PYTHON=ON -D USE_NUMPY=ON -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D ENABLE_NONFREE=ON -D USE_EPIPHANSDK=ON ../src
     - cmake --build . --config Release
     - ls
   tags:
