DEBUG ONLY: print MSVC_TOOLSET_VERSION

--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -4,6 +4,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
 message("BOOST_ROOT: ${BOOST_ROOT}")
 message("BOOST_INCLUDEDIR: ${BOOST_INCLUDEDIR}")
 message("BOOST_LIBRARYDIR: ${BOOST_LIBRARYDIR}")
+message("MSVC_TOOLSET_VERSION: ${MSVC_TOOLSET_VERSION}")
 
 if(NOT PYTHONLIBS_VERSION_STRING)
     # Needed in case PythonLibs discovery script not run, see
