--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -570,3 +570,4 @@ windows:
     - 69-support-for-epiphan-on-windows-10
     - 75-build-against-epiphan-sdk-on-windows-10-for-69
     - 78-opencv-free-epiphan-on-windows-10-for-69
+    - 84-generate-import-library-on-windows-builds-for-69
