--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -169,6 +169,17 @@ endif(USE_NUMPY AND NOT BUILD_PYTHON)
 # Library name
 SET(NAME giftgrab)
 
+if(WIN32)
+    INCLUDE(GenerateExportHeader)
+
+    GENERATE_EXPORT_HEADER(${NAME}
+        EXPORT_MACRO_NAME GG_EXPORTS
+        EXPORT_FILE_NAME gg_exports.h
+        STATIC_DEFINE SHARED_EXPORTS_BUILT_AS_STATIC
+        )
+    INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
+endif()
+
 # Library include dirs
 INCLUDE_DIRECTORIES(api)
 INCLUDE_DIRECTORIES(utils)
