Issue #84: added cross-platform export symbol def header to CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -192,6 +192,7 @@ SET(HEADERS
     api/videosourcefactory.h
     api/videotargetfactory.h
     api/except.h
+    api/exports.h
 )
 SET(SOURCES
     api/iobservable.cpp
