--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -357,7 +357,7 @@ if(WIN32)
 
     GENERATE_EXPORT_HEADER(${NAME}
         EXPORT_MACRO_NAME GG_EXPORTS
-        EXPORT_FILE_NAME gg_exports.h
+        EXPORT_FILE_NAME gg_exports_win.h
         STATIC_DEFINE SHARED_EXPORTS_BUILT_AS_STATIC
         )
 endif()
