DEBUG ONLY: set FindBoost debug mode

--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -8,6 +8,7 @@ message("MSVC_TOOLSET_VERSION: ${MSVC_TOOLSET_VERSION}")
 
 if(WIN32)
     SET(Boost_USE_MULTITHREADED ON)
+    SET(Boost_DEBUG ON)
 endif()
 
 if(NOT PYTHONLIBS_VERSION_STRING)
