First putting new-style logical op definitions into a list and then define

--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -8,7 +8,7 @@ if(WIN32)
     # we resort to this kind of workaround. This is inspired by
     # https://github.com/PixarAnimationStudios/OpenSubdiv/pull/817
     if(MSVC)
-        ADD_DEFINITIONS(
+        list(APPEND NEW_STYLE_LOGICAL_OPERATIONS
             /Dand=&&
             /Dand_eq=&=
             /Dbitand=&
@@ -24,6 +24,7 @@ if(WIN32)
             /Dxor=^/**/
             /Dxor_eq=^=
         )
+        ADD_DEFINITIONS(${NEW_STYLE_LOGICAL_OPERATIONS})
     endif()
 endif()
 
