--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -7,23 +7,25 @@ if(WIN32)
     # of Boost.Python (see https://github.com/boostorg/python/issues/67). So
     # we resort to this kind of workaround. This is inspired by
     # https://github.com/PixarAnimationStudios/OpenSubdiv/pull/817
-    list(APPEND NEW_STYLE_LOGICAL_OPERATIONS
-        /Dand=&&
-        /Dand_eq=&=
-        /Dbitand=&
-        /Dbitor=|
-        /Dcompl=~
-        /Dnot=!
-        /Dnot_eq=!=
-        /Dor=||
-        /Dor_eq=|=
-        # nvcc does not seem to like a caret being the last character
-        # in a command line defined preprocessor symbol, so add an
-        # empty trailing comment to avoid this.
-        /Dxor=^/**/
-        /Dxor_eq=^=
-    )
-    ADD_DEFINITIONS(${NEW_STYLE_LOGICAL_OPERATIONS})
+    if(MSVC)
+        list(APPEND NEW_STYLE_LOGICAL_OPERATIONS
+            /Dand=&&
+            /Dand_eq=&=
+            /Dbitand=&
+            /Dbitor=|
+            /Dcompl=~
+            /Dnot=!
+            /Dnot_eq=!=
+            /Dor=||
+            /Dor_eq=|=
+            # nvcc does not seem to like a caret being the last character
+            # in a command line defined preprocessor symbol, so add an
+            # empty trailing comment to avoid this.
+            /Dxor=^/**/
+            /Dxor_eq=^=
+        )
+        ADD_DEFINITIONS(${NEW_STYLE_LOGICAL_OPERATIONS})
+    endif()
 endif()
 
 if(NOT PYTHONLIBS_VERSION_STRING)
