List Release and Win32 directories

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -564,6 +564,8 @@ windows:
     - cmake -D CMAKE_BUILD_TYPE=Release -D ZLIB_ROOT="%zlib_root%" -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D ENABLE_NONFREE=ON -D USE_EPIPHANSDK=ON ../src
     - cmake --build . --config Release
     - ls
+    - ls Release
+    - ls Win32
   tags:
     - gift-hopper
     - windows
