Issue #81: added a one-liner Python test script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -562,6 +562,7 @@ windows:
     - cmake -D CMAKE_BUILD_TYPE=Release -D ZLIB_ROOT="%zlib_root%" -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D ENABLE_NONFREE=ON -D USE_EPIPHANSDK=ON -D USE_BGRA=OFF ../src
     - cmake --build . --config Release
     - ls
+    - python -c "from pygiftgrab import VideoSourceFactory"
   tags:
     - gift-hopper
     - windows
