added another one-liner test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -570,6 +570,7 @@ windows:
     - ls
     - cd Release
     - ls
+    - python -c "import pygiftgrab"
     - python -c "from pygiftgrab import VideoSourceFactory"
   tags:
     - gift-hopper
