repeat same one-liner but by typing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -571,6 +571,7 @@ windows:
     - cd Release
     - ls
     - python -c "import sys; import os; sys.path.append(os.getcwd()); import pygiftgrab"
+    - python -c "import sys; import os; sys.path.append(os.getcwd()); import pygiftgrab"
     - python -c "import pygiftgrab"
     - python -c "from pygiftgrab import VideoSourceFactory"
   tags:
