rename *.pyd => *.dll

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -570,6 +570,7 @@ windows:
     - ls
     - cd Release
     - ls
+    - mv pygiftgrab.pyd pygiftgrab.dll
     - python -c "import sys; import os; sys.path.append(os.getcwd()); import pygiftgrab"
     - python -c "import sys; import os; sys.path.append(os.getcwd()); import pygiftgrab"
     - python -c "import pygiftgrab"
