--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -320,8 +320,13 @@ TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
 LIST(APPEND INSTALLABLES ${NAME})
 
 # Sample C++ application for testing Epiphan live
+INCLUDE_DIRECTORIES(tests/epiphan/dvi2pcieduo)
 SET(SAVE_N_FRAMES save_n_frames)
-ADD_EXECUTABLE(${SAVE_N_FRAMES} tests/epiphan/dvi2pcieduo/save_n_frames_to_binary.cpp)
+ADD_EXECUTABLE(${SAVE_N_FRAMES}
+	tests/epiphan/dvi2pcieduo/io_utils.h
+	tests/epiphan/dvi2pcieduo/io_utils.cpp
+	tests/epiphan/dvi2pcieduo/save_n_frames_to_binary.cpp
+	)
 TARGET_LINK_LIBRARIES(${SAVE_N_FRAMES} ${NAME} ${EpiphanSDK_LIBS})
 
 # Documentation
