Issue #104: added new test app to CMake config

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -329,6 +329,14 @@ ADD_EXECUTABLE(${SAVE_N_FRAMES}
 	)
 TARGET_LINK_LIBRARIES(${SAVE_N_FRAMES} ${NAME} ${EpiphanSDK_LIBS})
 
+SET(SAVE_N_DUMMIES save_n_dummies)
+ADD_EXECUTABLE(${SAVE_N_DUMMIES}
+	tests/epiphan/dvi2pcieduo/io_utils.h
+	tests/epiphan/dvi2pcieduo/io_utils.cpp
+	tests/epiphan/dvi2pcieduo/save_n_dummies.cpp
+	)
+TARGET_LINK_LIBRARIES(${SAVE_N_DUMMIES} ${NAME} ${EpiphanSDK_LIBS})
+
 # Documentation
 if(BUILD_DOC)
     FIND_PACKAGE(Doxygen REQUIRED)
