Issue #94 [ci-skip]: Revert "Issue #75: TESTING ONLY Epiphan device check raises warning rather than fatal error"
This reverts commit 439003bda4eb94a7953c869c32abe3cc051f0695.

--- a/src/cmake/epiphansdk/CMakeLists.txt
+++ b/src/cmake/epiphansdk/CMakeLists.txt
@@ -211,7 +211,7 @@ EXECUTE_PROCESS(
     OUTPUT_STRIP_TRAILING_WHITESPACE
     )
 if(NOT V2U_EXIT_CODE EQUAL 0)
-    MESSAGE(WARNING
+    MESSAGE(FATAL_ERROR
         "No Epiphan cards seem to be installed on your system."
         )
 endif(NOT V2U_EXIT_CODE EQUAL 0)
