PR #105, Issue #106: fix typo

--- a/src/cmake/cpp11/CMakeLists.txt
+++ b/src/cmake/cpp11/CMakeLists.txt
@@ -18,7 +18,7 @@ if(UNIX)
     LIST(REMOVE_DUPLICATES CMAKE_CXX_FLAGS)
     SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}
         CACHE INTERNAL "C++11 flag set")
-elif(WIN32)
+elseif(WIN32)
     SET(CXX_STANDARD_REQUIRED ON)
     SET(CMAKE_CXX_STANDARD 11)
 endif()
