Issue #110: hard-coded FFmpeg libraries in CMake config for Windows

--- a/src/cmake/ffmpeg/CMakeLists.txt
+++ b/src/cmake/ffmpeg/CMakeLists.txt
@@ -15,5 +15,7 @@ if(UNIX)
         CACHE INTERNAL "FFmpeg library dirs"
     )
 elseif(WIN32)
-    # TODO
+    SET(FFmpeg_LIBS avformat avcodec avutil swscale avfilter
+        CACHE INTERNAL "FFmpeg libs"
+    )
 endif()
