Revert "Issue #110: using a CMake list for FFmpeg library names list in Windows"
This reverts commit 9d7d7cac42efa6a0e0933e843475c28c23d5b076.

--- a/src/cmake/ffmpeg/CMakeLists.txt
+++ b/src/cmake/ffmpeg/CMakeLists.txt
@@ -15,8 +15,7 @@ if(UNIX)
         CACHE INTERNAL "FFmpeg library dirs"
     )
 elseif(WIN32)
-    LIST(APPEND FFmpeg_LIBS avformat avcodec avutil swscale avfilter)
-    SET(FFmpeg_LIBS ${FFmpeg_LIBS}
+    SET(FFmpeg_LIBS avformat avcodec avutil swscale avfilter
         CACHE INTERNAL "FFmpeg libs"
     )
 endif()
