#15: handle Python version 3.* in Boost.Python and PythonLibs discovery scripts

--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -1,8 +1,35 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
 
-SET(GG_BOOST_COMPONENTS python)
+if(NOT PYTHONLIBS_VERSION_STRING)
+    # Needed in case PythonLibs discovery script not run, see
+    # https://github.com/gift-surg/GIFT-Grab/issues/83
+    # TODO handle this more elegantly
+    ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/../../cmake/pythonlibs ${CMAKE_CURRENT_BINARY_DIR}/cmake/pythonlibs-redundant-run)
+    if(NOT PYTHONLIBS_VERSION_STRING)
+        MESSAGE(FATAL_ERROR "Could not determine Python version")
+    endif()
+endif()
+if(PYTHONLIBS_VERSION_STRING MATCHES ^3\.*)
+    if(PYTHONLIBS_VERSION_STRING MATCHES ^3\.7\.*)
+        SET(GG_BOOST_PYTHON_SUFFIX 37)
+        MESSAGE(WARNING
+            "Python version ${PYTHON_VERSION_STRING} on Linux is only experimentally supported")
+        MESSAGE(WARNING
+            "Assuming you have built Boost.Python from source, will use suffix 37 (e.g. boost_python37)"
+            " for attempting to discover Boost.Python components. If your Boost.Python cannot be discovered,"
+            " and you are sure you have it installed, try changing the above GG_BOOST_PYTHON_SUFFIX to 3")
+    else()
+        SET(GG_BOOST_PYTHON_SUFFIX 3)
+    endif()
+elseif(PYTHONLIBS_VERSION_STRING MATCHES ^2\.7\.*)
+    SET(GG_BOOST_PYTHON_SUFFIX "")
+else()
+    MESSAGE(FATAL_ERROR "Found unsupported Python version ${PYTHONLIBS_VERSION_STRING}")
+endif()
+
+SET(GG_BOOST_COMPONENTS python${GG_BOOST_PYTHON_SUFFIX})
 if(USE_NUMPY)
-    LIST(APPEND GG_BOOST_COMPONENTS numpy)
+    LIST(APPEND GG_BOOST_COMPONENTS numpy${GG_BOOST_PYTHON_SUFFIX})
 endif(USE_NUMPY)
 FIND_PACKAGE(Boost COMPONENTS ${GG_BOOST_COMPONENTS} REQUIRED)
 SET(Boost_INCLUDE_DIR ${Boost_INCLUDE_DIR}
