--- a/giftgrab/CMakeLists.txt
+++ b/giftgrab/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.13.0)
 
-add_library(giftgrab)
+add_library(giftgrab_core)
 
-target_sources(giftgrab
+target_sources(giftgrab_core
   PRIVATE
   src/broadcastdaemon.cpp
   src/except.cpp
@@ -31,8 +31,8 @@ target_sources(giftgrab
   
 )
 
-target_include_directories(giftgrab PUBLIC include PRIVATE src)
-set_property(TARGET giftgrab PROPERTY CXX_STANDARD 11)
+target_include_directories(giftgrab_core PUBLIC include PRIVATE src)
+set_property(TARGET giftgrab_core PROPERTY CXX_STANDARD 11)
 
-include(GenerateExportHeader)
-generate_export_header(giftgrab)
+# include(GenerateExportHeader)
+# generate_export_header(giftgrab)
